--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -73,7 +73,10 @@ $sidebar-display: "sidebar-display";
   overflow-y: auto;
   width: $sidebar-width-medium;
   z-index: 99;
-  background: var(--sidebar-bg);
+  // background: var(--sidebar-bg);
+  // background-image: url("https://usercontents-c.styleshare.io/images/31643674/640x-");
+  background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),url("https://usercontents-c.styleshare.io/images/31643674/640x-");
+  // background-color: #00003F;
 
   a {
     @include sidebar-links;
@@ -93,7 +96,9 @@ $sidebar-display: "sidebar-display";
 
   .site-subtitle {
     font-size: 95%;
-    color: #828282;
+    // color: #828282;
+    color: #fff;
+    
     line-height: 1.2rem;
     word-spacing: 1px;
     margin: 0.5rem 1.5rem 0.5rem 1.5rem;
@@ -253,7 +258,7 @@ $sidebar-display: "sidebar-display";
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
-    border: 2px solid #b6b6b6;
+    border: 0px solid #b6b6b6;
     overflow: hidden;
     transform: translateZ(0); // fixed the zoom in Safari
     -webkit-transition: border-color 0.35s ease-in-out;
