blog | google adsense ready

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,9 @@
       <link rel="dns-prefetch" href="{{ site.google_analytics.pv.proxy_url }}">
     {% endif %}
   {% endif %}
+  
+  <!-- Google ad  -->
+  {% include ad.html %}
 
   <!-- jsDelivr CDN -->
   <link rel="preconnect" href="cdn.jsdelivr.net">
