--- a/assets/css/archives.scss
+++ b/assets/css/archives.scss
@@ -111,6 +111,7 @@
         margin-left: 2.5rem;
         position: relative;
         top: 0.1rem;
+        // font-family: 'InfinitySans-BoldA1';
       }
       &::after {
         @extend %date-timeline;
