--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -2,7 +2,7 @@
 <!-- for adsense approval -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script> (adsbygoogle = window.adsbygoogle || []).push({
-google_ad_client: "ca-pub-7788304754011441",
+google_ad_client: "pub-7788304754011441",
 enable_page_level_ads: true
 });
 </script>
