--- a/_includes/ad.html
+++ b/_includes/ad.html
@@ -1,8 +1,10 @@
   
 <!-- for adsense approval -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script> (adsbygoogle = window.adsbygoogle || []).push({
 google_ad_client: "pub-7788304754011441",
 enable_page_level_ads: true
 });
-</script>
+</script> -->
+<script data-ad-client="pub-7788304754011441" async src="https://pagead2.googlesyndication
+.com/pagead/js/adsbygoogle.js"></script>
